--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -95,6 +95,7 @@
     },
     "cSpell.words": [
         "Adventofcode",
+        "intervaltree",
         "joltage",
         "myfile",
         "networkx"
